// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/Alert default 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Alert
    className=""
    kind="default"
  >
    <Box
      as="div"
      className="root default"
      outline={true}
      space="medium"
    >
      <div
        className="root root default outline medium"
      >
        Lorem ipsum
      </div>
    </Box>
  </Alert>
</div>
`;

exports[`Storyshots UI/Alert with kind danger 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Alert
    className=""
    kind="danger"
  >
    <Box
      as="div"
      className="root danger"
      outline={true}
      space="medium"
    >
      <div
        className="root root danger outline medium"
      >
        Lorem ipsum
      </div>
    </Box>
  </Alert>
</div>
`;

exports[`Storyshots UI/Alert with kind info 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Alert
    className=""
    kind="info"
  >
    <Box
      as="div"
      className="root info"
      outline={true}
      space="medium"
    >
      <div
        className="root root info outline medium"
      >
        Lorem ipsum
      </div>
    </Box>
  </Alert>
</div>
`;

exports[`Storyshots UI/Alert with kind success 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Alert
    className=""
    kind="success"
  >
    <Box
      as="div"
      className="root success"
      outline={true}
      space="medium"
    >
      <div
        className="root root success outline medium"
      >
        Lorem ipsum
      </div>
    </Box>
  </Alert>
</div>
`;

exports[`Storyshots UI/Alert with kind warning 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Alert
    className=""
    kind="warning"
  >
    <Box
      as="div"
      className="root warning"
      outline={true}
      space="medium"
    >
      <div
        className="root root warning outline medium"
      >
        Lorem ipsum
      </div>
    </Box>
  </Alert>
</div>
`;
